@@ -10,6 +10,10 @@ Version 0.3.9 - ??
 - [new] Add WFRequestController->isMobileBrowser()
 - [new] Add PhocoaControllerTestCase_PHPUnit as a PHPUnit TestCase subclass for testing controllers.
 - [bugfix] Fix bug in WFImage that caused WFAction's to not be placed in <script> tags.
+- [new] Add support for parameter options to WFPageDelegate::getParameterList().
+        Form array('param1' => 'myDefaultValue', 'param2') allows you to optionally specify default values.
+        Form array('param1' => array('defaultValue' => 'myDefaultValue', 'greedy' => true) allows you to specify other options, like greedy.
+        Greedy is ignored on all but the LAST parameter, and has the effect of including the rest of the /-separated PATH_INFO in the last parameter.
 
 Version 0.3.8 - 9/15/2010
 - [new] add WFWebApplicationDelegate::rerouteInvocationPath() function to allow routing customizations.
